# rrole

./: .travis.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yaml
ci/: before_deploy.sh  install.sh
src/: main.rs
