[package]
name = "rrole"
version = "0.1.1"
license = "MIT"
authors = ["Aaron J. Smith <ajsmith10381@gmail.com>"]
categories = ["authentication", "command-line-interface"]
description = "Assume IAM roles with this Rust-based command line utility"
repository = "https://github.com/slapula/rrole"
keywords = ["aws", "sts", "cli", "role", "iam"]

[dependencies]
chrono = "0.4"
quicli = "0.3"
rusoto_core = "0.32.0"
rusoto_sts = "0.32.0"
