[package]
name = "rrole"
version = "0.1.2"
license = "MIT"
authors = ["Aaron J. Smith <ajsmith10381@gmail.com>"]
categories = ["authentication", "command-line-interface"]
description = "Assume IAM roles with this Rust-based command line utility"
readme = "README.md"
homepage = "https://github.com/slapula/rrole"
repository = "https://github.com/slapula/rrole"
travis-ci = { repository = "slapula/rrole", branch = "master" }
keywords = ["aws", "sts", "cli", "role", "iam"]

[dependencies]
chrono = "0.4"
quicli = "0.3"
rusoto_core = "0.32.0"
rusoto_sts = "0.32.0"
